--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-* {
+/* general */
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,7 +13,7 @@
     --link: #03aaf7;
     --textw: #ffffff;
 }
-
+    /* organizzazione dati */
 body {
     background-color: var(--textw);
 
@@ -28,4 +29,20 @@ h1 {
     color: var(--title);
     text-align: center;
     padding-top: 2.5rem;
+    
+}
+
+.description{
+    font-size: 1rem;
+    font-weight: 100rem;
+    padding-top: 2rem;
+    text-align: center;
+}
+
+.box{
+    background-color: var(--bgbox);
+    width: 50px;
+    height: 70px;
+    color: var(--textw);
+    
 }
