fix prima box nome in css

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* general */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,7 +13,8 @@
     --link: #03aaf7;
     --textw: #ffffff;
 }
-    /* organizzazione dati */
+
+/* organizzazione dati */
 body {
     background-color: var(--textw);
 
@@ -29,20 +30,43 @@ h1 {
     color: var(--title);
     text-align: center;
     padding-top: 2.5rem;
-    
+
 }
 
-.description{
+.description {
     font-size: 1rem;
     font-weight: 100rem;
     padding-top: 2rem;
     text-align: center;
+    font-style: italic;
+    f
 }
 
-.box{
-    background-color: var(--bgbox);
-    width: 50px;
-    height: 70px;
+.worker {
+    padding-left: 2rem;
+    padding-top: 3rem;
+}
+
+.information {
     color: var(--textw);
-    
+}
+
+.box,
+img {
+    background-color: var(--bgbox);
+    width: 160px;
+    height: 50px;
+    color: var(--textw);
+    float: left;
+}
+
+.img {
+    object-position: left;
+    object-fit: contain;
+    float: left;
+
+}
+
+.left {
+    float: left;
 }
