--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-style: ;
     font-family: 'Fredoka One', cursive;
 }
 
@@ -50,7 +49,7 @@ h1 {
 
 .worker{
     padding-left: 2rem;
-    padding-bottom: 10px;
+    padding-top: 2rem;
 }
 
 .information {
@@ -62,7 +61,8 @@ h1 {
     background-color: var(--bgbox);
     text-align: left;
     vertical-align: center;
-    width: 40%;
+    width: calc(100% / 3);
+
 }
 
 img { 
