--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@ h1 {
 
 }
 
+.boxcentrale{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 img { 
     color: var(--textw);
     float: left;
